--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 
     <!-- libs -->
     <script src="vendor/phaser/phaser.js"></script>
+    <script src="vendor/box2d-plugin-full.js"></script>
 
     <!--
     <script src="vendor/pkframework/pkframework.js"></script>
@@ -52,7 +53,7 @@
         */
 
     </script>
-    <title>Saci Night Fever</title>
+    <title>Jamtastic vol.3</title>
 </head>
 <body style="
     background-color: black;
